fix(experience): adjust SP dot position to align with card top area

--- a/scss/top/_experience.scss
+++ b/scss/top/_experience.scss
@@ -141,7 +141,7 @@
   @include sp {
     grid-column: 1;
     grid-row: 1 / 3;
-    padding-top: 4px;
+    padding-top: 64px;
     align-items: flex-start;
   }
 }
